namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hebe
  labels:
    name: hebe
